# lia-workflow-specs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  GETTING_STARTED.md  GITHUB_REPO_CHECKLIST.md  LICENSE  README.md  README_test.md  REPO_STRUCTURE.md  Specs_OVERVIEW.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spec_proposal.md
.github/workflows/: mcp-server-ci.yml  validate-specs.yml
docs/: STRATEGIC_VISION.md  best-practices.md  notepad-standard.md  strategic-recommendations.md  troubleshooting-quickstart.md  workflow-composition.md  workflow-guide.md
docs/archive/research/: feature-matrix.md  positioning-options.md  strategic-synthesis-jan-2026.md
docs/archive/setup/: PROGRESS_REPORT.md  REPOSITORY_READY.md  SETUP_COMPLETE.md
docs/development/blueprint-1/phase-1/new-implementations/: README.md
docs/development/blueprint-1/phase-1/proposals-for-review/: README.md
docs/research/: MASTER_RESEARCH_SYNTHESIS.md  actionable-insights.md  ai-workflow-landscape-dec2025.md  deep-research-jan-2026.md  feature-matrix.md  landscape-scan-jan-2026.md  positioning-refined.md
examples/feature-spec-example/: 0-notepad.md  1-requirements.md  README.md
examples/paper-analysis-example/: README.md
mcp-server/: README.md  install.sh  pyproject.toml
mcp-server/config/: README.md  claude-desktop.json  cursor.json
mcp-server/examples/: README.md  basic_usage.py  workflow_starter.py
mcp-server/src/lia_workflow_mcp/: __init__.py  models.py  server.py  triggers.py
mcp-server/src/workflow_specs_mcp/: __init__.py  server.py  spec_loader.py
mcp-server/tests/: __init__.py  test_models.py  test_server.py  test_spec_loader.py
schemas/: workflow-spec.schema.json
specs/_common/: base-workflow.toml  workflow-triggers.toml
specs/development/: dev.toml  spec.toml  test.toml
specs/knowledge/: docs.toml
specs/problem-solving/: investigate.toml  troubleshoot.toml  wtf.toml
specs/quality/: architecture.toml  constitution.toml  optimize.toml  review.toml  security.toml
specs/research/: learn.toml  paper.toml  recon.toml  research.toml
specs/strategy/: innovate.toml  integrate.toml  nexus.toml
templates/: 0-notepad-template.md  base-workflow.toml
tools/: README.md  fix-spec-paths.py  requirements.txt  spec-validator.py
