[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lia-workflow-specs-mcp"
version = "1.0.0"
description = "MCP server for Lia Workflow Specs - enabling remote agent access to systematic development workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lia Workflow Team" }
]
keywords = ["mcp", "workflow", "ai", "agents", "specifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "tomli>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
lia-mcp-server = "lia_workflow_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lia_workflow_mcp"]
