[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-specs-mcp"
version = "1.0.0"
description = "MCP server for Lia Workflow Specs - enables remote agent connection to structured workflow specifications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lia Workflow Specs Team" }
]
keywords = ["mcp", "workflow", "ai", "agents", "specifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "tomli>=2.0.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
workflow-specs-mcp = "workflow_specs_mcp.server:main"

[project.urls]
Homepage = "https://github.com/lia-workflows/workflow-specs"
Documentation = "https://github.com/lia-workflows/workflow-specs#readme"
Repository = "https://github.com/lia-workflows/workflow-specs"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_specs_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
